objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>THUMBNAIL Version used for Product Related Lists</description>
        <formula>IMAGE(  PricebookEntry.Product2.purl__c    , &quot;No Image&quot;, 50, 85)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Uses Product_Image_URL__c to reference the image stored in the Documents Tab. THUMBNAIL Version used for Product Related Lists</inlineHelpText>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_and_Code__c</fullName>
        <formula>PricebookEntry.Product2.Name_with_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name and Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_formula__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ParentID__c</fullName>
        <inlineHelpText>ID of the opportunity product that came from this product&apos;s bundle.</inlineHelpText>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this Opportunity Product.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>